test/error/syntax/err2.rzy

component
  Foo{Bar:Natural}
  implementation elementary
  end

  Err2
  implementation composition
    component
      foo: Foo;  // no template parameter
  end

